# gcs-cpp-directpath-example

./: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-gcs-cpp-directpath-example  bazel-out  bazel-testlogs
